--- a/frontend/src/pages/songDetails/SongDetails.css
+++ b/frontend/src/pages/songDetails/SongDetails.css
@@ -48,6 +48,7 @@
 .music-actions {
     margin: 2em 0 0;
     display: flex;
+    align-items: center;
     gap: 1em;
 }
 
